fix user permission